# Quiz-Generation-Backend

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260314_0001_initial.py  20260314_0002_question_fingerprint.py
app/: __init__.py  main.py
app/contracts/: __init__.py  ai.py  quiz.py  source.py
app/core/: config.py  database.py
app/db/: __init__.py  models.py  session.py
app/http/: dependencies.py  routes.py
app/logic/: ai.py  quiz_service.py  retrieval.py  scoring.py  source_service.py
app/models/: __init__.py  base.py  quiz.py  source.py
app/schemas/: common.py
app/services/: chunking.py  pdf.py
data/pdfs/: README.md
samples/: api_responses.json  database_schema.md  extracted_source.json  generated_quiz_question.json
scripts/: evaluate_and_refresh_samples.ps1
tests/: conftest.py  test_ai_reliability.py  test_quiz_flow.py  test_sources.py
